# mailmind-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  streamlit_app.py
data/: emails.csv  sample_predictions.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FINDINGS.md  MailMind_AI.pptx  PPT_CONTENT.md  SAMPLE_OUTPUTS.md
models/: baseline_comparison.json  mailmind_classifier.joblib  metrics.json  model_comparison.csv
notebooks/: exploration.ipynb
scripts/: build_pptx.py  capture_screenshots.py  demo.py  download_nltk.py  generate_data.py  make_architecture_diagram.py  run_api.sh  run_ui.sh  sample_outputs.py  train_model.py
src/mailmind/: __init__.py  cli.py  config.py  schema.py
src/mailmind/agent/: __init__.py  actions.py  agent.py  summarizer.py
src/mailmind/api/: __init__.py  main.py
src/mailmind/behavioral/: __init__.py  learner.py
src/mailmind/context/: __init__.py  scorer.py
src/mailmind/data/: __init__.py  dataset_generator.py  preprocess.py
src/mailmind/db/: __init__.py  database.py  models.py
src/mailmind/ml/: __init__.py  classifier.py  evaluate.py  features.py  train.py
src/mailmind/nlp/: __init__.py  intent.py  keywords.py  sentiment.py  urgency.py
src/mailmind/utils/: __init__.py  text.py
tests/: __init__.py  conftest.py  test_agent.py  test_behavioral.py  test_classifier.py  test_context.py  test_dataset.py  test_db.py  test_features.py  test_nlp.py
