[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailmind-ai"
version = "1.0.0"
description = "MailMind AI — Your Inbox, Intelligently Organized. An agentic AI email assistant."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MailMind AI Team" }]
keywords = ["nlp", "machine-learning", "email", "agentic-ai", "classification"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "joblib>=1.3",
    "nltk>=3.8",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6", "python-multipart>=0.0.9"]
ui = ["streamlit>=1.33", "altair>=5.2"]
nlp = ["spacy>=3.7"]
viz = ["matplotlib>=3.7", "seaborn>=0.13"]
dev = ["pytest>=8.0"]

[project.scripts]
mailmind-generate = "mailmind.data.dataset_generator:main"
mailmind-train = "mailmind.ml.train:main"
mailmind-demo = "mailmind.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
